[Chromium] Flash cannot receive scroll events when threaded compositing is in use https://bugs.webkit.org/show_bug.cgi?id=101423

Patch by Yusuke Sato <yusukes@chromium.org> on 2012-11-19
Reviewed by James Robinson.

Source/WebKit/chromium:

Add setWantsWheelEvents() to Chromium's WebPluginContainer interface so that a plugin can tell the
container that the plugin always wants to handle wheel events even when a scroll bar is not shown.

* public/WebPluginContainer.h:
(WebPluginContainer):
* src/WebPluginContainerImpl.cpp:
(WebKit::WebPluginContainerImpl::setWantsWheelEvents):
(WebKit):
(WebKit::WebPluginContainerImpl::wantsWheelEvents):
(WebKit::WebPluginContainerImpl::WebPluginContainerImpl):
* src/WebPluginContainerImpl.h:
(WebPluginContainerImpl):

Tools:

Call setWantsWheelEvents(true) in initialize() so that gesture-events and transformed-events tests in
LayoutTests/platform/chromium/plugins/ will not fail even if a buildbot introduces threaded compositing
in the future.

* DumpRenderTree/chromium/TestWebPlugin.cpp:
(TestWebPlugin::initialize):

Canonical link: https://commits.webkit.org/120852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135178 268f45cc-cd09-0410-ab3c-d52691b4dbfc