Source/WebKit/chromium/public/WebPluginContainer.h
@@ -111,6 +111,12 @@ public:
     // Notifies when the plugin starts/stops accepting touch events.
     virtual void setIsAcceptingTouchEvents(bool) = 0;
 
+    // Notifies when the plugin starts/stops accepting wheel events. Without
+    // calling the function with true, the container might not always able to
+    // receive wheel events in some cases (such as when threaded compositing
+    // is in use but a scroll bar is not in use).
+    virtual void setWantsWheelEvents(bool) = 0;
+
     virtual WebPlugin* plugin() = 0;
     virtual void setPlugin(WebPlugin*) = 0;
 
