Source/WebKit/chromium/src/WebPluginContainerImpl.h
@@ -79,6 +79,7 @@ public:
     virtual bool getFormValue(String&);
     virtual bool supportsKeyboardFocus() const;
     virtual bool canProcessDrag() const;
+    virtual bool wantsWheelEvents();
 
     // Widget methods
     virtual void setFrameRect(const WebCore::IntRect&);
@@ -113,6 +114,7 @@ public:
     virtual void setOpaque(bool);
     virtual bool isRectTopmost(const WebRect&);
     virtual void setIsAcceptingTouchEvents(bool);
+    virtual void setWantsWheelEvents(bool);
 
     // This cannot be null.
     WebPlugin* plugin() { return m_webPlugin; }
@@ -199,6 +201,7 @@ private:
     OwnPtr<ScrollbarGroup> m_scrollbarGroup;
 
     bool m_isAcceptingTouchEvents;
+    bool m_wantsWheelEvents;
 };
 
 } // namespace WebKit
